<resources>
    <string name="app_name">Pruebas tema 5</string>
    <string name="pruebasSQLite">Pruebas SQLite</string>
    <string name="pruebasPreferencias">Pruebas de Preferencias</string>
    <string name="tituloInsertar">SQLite: Insertar Usuario</string>
    <string name="nombreUsuario">Nombre de Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="insertar">Insertar</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <string name="tituloModificar">SQLite: Modificar Usuario</string>
    <string name="listaUsuarios">Listado de usuarios:</string>
    <string name="usuarioInsertado">Usuario Insertado</string>
    <string name="usuarioModificado">Usuario Modificado</string>
    <string name="errorInsertandoUsuario">Error insertando usuario</string>
    <string name="errorModificandoUsuario">Error modificando usuario</string>
    <string name="pruebasAlmacenamiento">Pruebas de Almacenamiento</string>
    <string name="almacenamientoInterno">Almacenamiento interno privado</string>
    <string name="almacenamientoExternoPrivado">Almacenamiento externo privado</string>
    <string name="almacenamientoExternoPublico">Almacenamiento externo público</string>
    <string name="machacarFichero">Machacar Fichero</string>
    <string name="concatenarContenido">Concatenar al final</string>
    <string name="nombreFichero">Nombre del fichero</string>
    <string name="contenido">Escribe aquí el contenido...</string>
    <string name="guardar">Guardar</string>
    <string name="rutaActual">Ruta actual:</string>
    <string name="noImplementado">Aún no está implementado</string>
    <string name="ficheroEscrito">¡Fichero escrito!</string>
    <string name="haSidoAbierto">abierto con éxito.</string>
    <string name="ficheroBorrado">borrado con éxito.</string>
    <string name="errorAlBorrar">Error al borrar:</string>
    <string name="seleccionadoInternoPrivado">Seleccionado almacenamiento interno privado</string>
    <string name="seleccionadoExternoPrivado">Seleccionado almacenamiento externo privado</string>
    <string name="seleccionadoExternoPublico">Seleccionado almacenamiento externo público</string>
    <string name="modoOscuro">Modo Oscuro</string>
    <string name="aplicarCambios">Aplicar cambios</string>
    <string name="irAPrefenciasClasicas">Prefrencias (Modo Clásico)</string>
    <string name="cambiosAplicados">¡Cambios aplicados!</string>
    <string name="ficheroPorDefecto">Fichero por defecto para pruebas almacenamiento</string>
    <string name="modoClaro">Modo Claro</string>
    <string name="registrarse">Registrate</string>
    <string name="bienvenido">Bienvenid@,</string>
    <string name="logout">Cerrar sesion</string>
    <string name="registradoConExito">Registrado con éxito</string>
    <string name="errorUsuarioYaExiste">Error en el registro: El email ya está registrado</string>
    <string name="emailMalFormateado">Error en el registro: el email no está bien formateado</string>
    <string name="login">Login</string>
    <string name="pruebasFirebase">Pruebas Firebase</string>
    <string name="soloPasaLogado">No puedes acceder aquí sin haber iniciado sesión</string>
    <string name="clave1">Clave 1</string>
    <string name="clave2">Clave 2</string>
    <string name="valor1">Valor 1</string>
    <string name="valor2">Valor 2</string>
    <string name="coleccion">Nombre de coleccion</string>
    <string name="insercionOk">Dato insertado correctamente</string>
    <string name="insercionFallida">La insercion ha fallado</string>
    <string name="nombreDocumento">Nombre del documento</string>
    <string name="consultar">Consultar</string>
</resources>