<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/elementoRaiz"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PruebasSQLite" >

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/moss"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/elementoConFondo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparentWhite">

            <Spinner
                android:id="@+id/spinnerLugarAlmacenamiento"
                android:entries="@array/tiposAlmacenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
               android:padding="7dp"
                android:background="@color/teal_700"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPruebasPreferencias" />

            <TextView
                android:id="@+id/textViewPruebasPreferencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPruebaAlmacenamiento"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switchTipoApertura"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="7dp"
                android:text="@string/machacarFichero"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerLugarAlmacenamiento" />

            <EditText
                android:id="@+id/campoNombreCopiado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:padding="7dp"
                android:ems="10"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:hint="@string/nombreFichero"
                android:textColorHint="@color/gris"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchTipoApertura" />

            <Button
                android:id="@+id/btnMostrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/guardar"
                android:onClick="guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="OnClick" />

            <EditText
                android:id="@+id/campoContenidoCopiado"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:background="@color/white"
                android:textColor="@color/black"
                android:padding="7dp"
                android:hint="@string/contenido"
               android:textColorHint="@color/gris"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/btnMostrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campoNombreCopiado" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparentBlue"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtAlmacenamientoExternoPrivado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rutaActual"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/recyclerExternoPrivado"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAlmacenamientoExternoPrivado" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</FrameLayout>