<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PruebasSQLite" >

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/moss"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparentWhite">

            <TextView
                android:id="@+id/textViewPruebasPreferencias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/almacenamientoInterno"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/campoNombreCopiado"
                android:layout_width="0dp"
                android:layout_height="17dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="4dp"

                android:background="@color/white"
                android:ems="10"
                android:hint="@string/nombreFichero"


                android:textColor="@color/black"
                android:textColorHint="@color/gris"

                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/campoContenidoCopiado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnMostrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"

                android:text="@string/mostrar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/campoContenidoCopiado"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:background="@color/white"
                android:ems="10"
                android:gravity="start|top"
                android:hint=""
                android:inputType="textMultiLine"


                android:textColor="@color/black"
                android:textColorHint="@color/gris"
                app:layout_constraintBottom_toTopOf="@+id/btnMostrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent" />

            <ListView
                android:id="@+id/listaInternaPrivada"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/campoNombreCopiado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPruebasPreferencias" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparentBlue"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtAlmacenamientoExternoPrivado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/almacenamientoExternoPrivado"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/listaExternaPrivada"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAlmacenamientoExternoPrivado" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</FrameLayout>